new file:   SIG.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sportverein</title>
+    <title>Polizei</title>
 </head>
 <body>
 
@@ -12,37 +12,33 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#verein">Verein</a></li>
-            <li><a href="#sektionen">Sektionen</a></li>
+            <li><a href="#allgemein">Allgemein</a></li>
+            <li><a href="#abteilungen">Abteilungen</a></li>
             <li><a href="#spieler">Spieler</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
         </ul>
     </nav>
 
-    <section id="verein">
-        <h2>Verein</h2>
-        <p>Der <strong>Wiener Sport-Club</strong> (oft kurz „WSC“ oder einfach nur „Sport-Club“ genannt) ist einer der ältesten Sportvereine Österreichs. Der Verein ging aus dem am 24. Februar 1883 gegründeten Wiener Cyclistenclub hervor. Seit Sommer 2017 ist die Fußballsektion nach über 15 Jahren Abwesenheit neben den Sektionen Fechten, Rad, Laufen, Squash, Schwimmen & Wasserball wieder in den Gesamtverein eingegliedert. </p>
+    <section id="allgemein">
+        <h2>Allgemein</h2>
+        <p>Die Gewährleistung von <strong> Sicherheit </strong> ist die umfassende und verantwortungsvolle Kernaufgabe des Bundesministeriums für Inneres. Gemeinsam sorgen unsere 38.000 Mitarbeiterinnen und Mitarbeiter mit vollem Einsatz – 365 Tage im Jahr, 24 Stunden täglich – für die Sicherheit der Bürgerinnen und Bürger in Österreich und aller Menschen, die hier leben. Sie tragen entscheidend dazu bei, dass Staat und Gesellschaft zuverlässig funktionieren.</p>
 
-        <img src="wsc_logo.png">
+        <img src="SIG.jpg" width="500px">
     </section>
 
-    <section id="sektionen">
-        <h2>Sektionen</h2>
+    <section id="abteilungen">
+        <h2>Abteilungen</h2>
 
-        <p>Der Wiener Sportklub gliedert sich in folgende Sektionen:
+        <p>Die Einsatzbereiche der österreichischen Bundespolizei:
             <ul>
-                <li>Fechten</li>
-                <li>WSC Fechten</li>
-                <li>Rad</li>
-                <li>Wasserball</li>
-                <li>Schwimmen</li>
-                <li>Squash</li>
-                <li>Fußball</li>
-                <li>Laufen</li>
-                <li>Eishockey</li>
-                <li><a href="https://de.wikipedia.org/wiki/P%C3%A9tanque">Petanque</a></li>
-                <li>Tischfußball</li>
-                <li>EMCA</li>
+                <li>Die schnellen Interventionsgruppen</li>
+                <li>Die Bereitschaftseinheit</li>
+                <li>Die Landesverkehrs­abteilung</li>
+                <li>Die Kriminalpolizei</li>
+                <li>Die Polizeidienst­hundeeinheit</li>
+                <li>Die WEGA</li>
+                <li>Die Cobra</li>
+                <li><a href="https://de.wikipedia.org/wiki/Puma_(Polizeieinheit)">Die PUMA</a></li>
             </ul>
         </p>
     </section>
