modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
     <header>
-        Das ist der Header
+        <strong><h1>P O L I Z E I</h1></strong>
     </header>
     <nav>
         <ul>
             <li><a href="#allgemein">Allgemein</a></li>
             <li><a href="#abteilungen">Abteilungen</a></li>
-            <li><a href="#spieler">Spieler</a></li>
-            <li><a href="#kontakt">Kontakt</a></li>
+            <li><a href="#pi">Polizeiinspektionen</a></li>
+            <li><a href="#vorliegen">Vorliegen</a></li>
         </ul>
     </nav>
 
@@ -43,157 +43,98 @@
         </p>
     </section>
 
-    <section id="spieler">
-        <h2>Spieler</h2>
+    <section id="pi">
+        <h2>Polizeiinspektionen</h2>
         <table>
             <thead>
                 <tr>
                     <th>Nummer</th>
-                    <th>Name</th>
-                    <th>Position</th>
+                    <th>help.gv.at-ID</th>
+                    <th>Bezeichnung</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>01</td>
-                    <td>Florian Prögelhof</td>
-                    <td>Tor</td>
+                    <td>HP7623</td>
+                    <td>7623</td>
+                    <td>Grenzpolizeiinspektion (GREKO) Klagenfurt am Wörther See-Annabichl</td>
                 </tr>
                 <tr>
-                    <td>27</td>
-                    <td>Jürgen Csandl</td>
-                    <td>Verteidigung</td>
+                    <td>HP7368</td>
+                    <td>7368</td>
+                    <td>Polizeiinspektion (AGM-SB) Linz-Hauptbahnhof (AGM-SB)</td>
                 </tr>
                 <tr>
-                    <td>17</td>
-                    <td>Philip Dimov</td>
-                    <td>Verteidigung</td>
+                    <td>HP7228</td>
+                    <td>7228</td>
+                    <td>Polizeiinspektion Alland</td>
                 </tr>
                 <tr>
-                    <td>05</td>
-                    <td>Luka Gusic</td>
-                    <td>Verteidigung</td>
+                    <td>HP7121</td>
+                    <td>7121</td>
+                    <td>Polizeiinspektion Bad Ischl</td>
                 </tr>
                 <tr>
-                    <td>03</td>
-                    <td>Philipp Haas</td>
-                    <td>Verteidigung</td>
+                    <td>HP7251</td>
+                    <td>7251</td>
+                    <td>Polizeiinspektion Eisenstadt-Neusiedlerstraße</td>
                 </tr>
                 <tr>
-                    <td>20</td>
-                    <td>Hannes Küng</td>
-                    <td>Verteidigung</td>
+                    <td>HP7451</td>
+                    <td>7451</td>
+                    <td>Polizeiinspektion Fischamend</td>
                 </tr>
                 <tr>
-                    <td>04</td>
-                    <td>Niklas Marlovics</td>
-                    <td>Verteidigung</td>
+                    <td>HP7007</td>
+                    <td>7007</td>
+                    <td>Polizeiinspektion Wien-Kandlgasse</td>
                 </tr>
                 <tr>
-                    <td>04</td>
-                    <td>Emmanuel Ojukwu</td>
-                    <td>Verteidigung</td>
+                    <td>HP7538</td>
+                    <td>7538</td>
+                    <td>Polizeiinspektion Wien-Koppstraße</td>
                 </tr>
                 <tr>
-                    <td>13</td>
-                    <td>Lucas Pfaffl</td>
-                    <td>Verteidigung</td>
+                    <td>HP6778</td>
+                    <td>6778</td>
+                    <td>Polizeiinspektion Wien-Praterstern</td>
                 </tr>
                 <tr>
-                    <td>18</td>
-                    <td>Dominik Akrap</td>
-                    <td>Mittelfeld</td>
+                    <td>HP6829</td>
+                    <td>6829</td>
+                    <td>Polizeiinspektion Wien-Simmeringer Hauptstraße</td>
                 </tr>
                 <tr>
-                    <td>23</td>
-                    <td>Mirza Berkovic</td>
-                    <td>Mittelfeld</td>
+                    <td>HP7431</td>
+                    <td>7431</td>
+                    <td>Polizeiinspektion/ Bezirksleitstelle Hollabrunn</td>
                 </tr>
-                <tr>
-                    <td>30</td>
-                    <td>Philip Buzuk</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>08</td>
-                    <td>Florian Gerstl</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>21</td>
-                    <td>Berat Kocak</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td>Aleksandar Kostic</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>31</td>
-                    <td>Liam Kratky</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>07</td>
-                    <td>Martin Pajaczkowski</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>06</td>
-                    <td>David Rajkovic</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>16</td>
-                    <td>Emirhan Tütünci</td>
-                    <td>Mittelfeld</td>
-                </tr>
-                <tr>
-                    <td>29</td>
-                    <td>Miroslav Beljan</td>
-                    <td>Sturm</td>
-                </tr>
-                <tr>
-                    <td>09</td>
-                    <td>Felix Kerber</td>
-                    <td>Sturm</td>
-                </tr>
-                <tr>
-                    <td>19</td>
-                    <td>Gerasim Pavlovic</td>
-                    <td>Sturm</td>
-                </tr>
-                <tr>
-                    <td>12</td>
-                    <td>Mario Vucenovic</td>
-                    <td>Sturm</td>
-                </tr>
-
             </tbody>
             <tfoot>
-                Kader der Kampfmannschaft (Männer) des Wiener Sportclub
+                Liste von Österreichischen Polizeiinspektionen
             </tfoot>
         </table>
 
     </section>
 
-    <footer id="kontakt">
-        <h2>Kontakt</h2>
+    <footer id="vorliegen">
+        <h2>Vorliegen</h2>
         <form>
             Name: <input type="text">
 
-            Email: <input type="text">
+            <p>Telefonnummer: <input type="text"></p>
 
-            Ich bin kein Roboter: <input type="checkbox">
+            <p>Anliegen: <textarea id="text" name="text" cols="35" rows="4"></textarea></p>
 
-            <button>Abschicken</button>
+            <p>anonyme Meldung: <input type="checkbox"></p>
+
+            <p><button>Abschicken</button></p>
 
             <script>
                 const btn = document.querySelector("button");
 
                 btn.addEventListener('click', function() {
-                    alert("Sie wurden in den Newsletter-Verteiler aufgenommen!");
+                    alert("Ihr Anliegen wurde weitergeleitet. Wir werden uns in Kürze melden!");
                 });
             </script>
         </form>
