--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polizei</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
         <strong><h1>P O L I Z E I</h1></strong>
     </header>
+    <p >Willkommen auf der Webseite von der offiziellen österreichischen Polizei!</p>
     <nav>
         <ul>
             <li><a href="#allgemein">Allgemein</a></li>
             <li><a href="#abteilungen">Abteilungen</a></li>
             <li><a href="#pi">Polizeiinspektionen</a></li>
+            <li><a href="#streifendienst">Streifendienst</a></li>
             <li><a href="#vorliegen">Vorliegen</a></li>
         </ul>
     </nav>
@@ -116,7 +119,16 @@
         </table>
 
     </section>
+    <section id="streifendienst">
+        <h2>Streifendienst</h2>
+        <p>Der Streifendienst wird an 365 Tagen im Jahr rund um die Uhr durchgeführt und ist die wesentliche Säule der polizeilichen Arbeit.
 
+            <p>Die Polizistinnen und Polizisten werden dabei mit allen polizeilichen Sachverhalten (Fahndungen, Verkehrsunfällen, Diebstählen, Gewaltdelikten, Todesfällen usw.) konfrontiert. Sie wehren akute Gefahren ab, leiten Maßnahmen ein, nehmen Anzeigen auf und helfen Opfern. Der Streifendienst ist eine herausfordernde, vielfältige und spannende Tätigkeit. Nach Absolvierung der Polizeischule versehen Polizistinnen und Polizisten im Streifendienst einer Polizeiinspektion ihren Dienst. Im Exekutivdienst werden Polizistinnen und Polizisten jeden Alters eingesetzt. Durch diese Tätigkeit wird auch die Voraussetzung geschaffen, sich für andere polizeiliche Aufgaben zu qualifizieren, da die Polizeiarbeit von Grund auf erlernt werden muss.</p>
+            
+            </p>
+
+        <img src="Streifendienst.jpg" width="500px">
+    </section>
     <footer id="vorliegen">
         <h2>Vorliegen</h2>
         <form>
