modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
-        <strong><h1>P O L I Z E I</h1></strong>
+        <h1>P O L I Z E I</h1>
     </header>
     <p >Willkommen auf der Webseite von der offiziellen österreichischen Polizei!</p>
     <nav>
@@ -31,7 +30,6 @@
 
     <section id="abteilungen">
         <h2>Abteilungen</h2>
-
         <p>Die Einsatzbereiche der österreichischen Bundespolizei:
             <ul>
                 <li>Die schnellen Interventionsgruppen</li>
@@ -117,36 +115,28 @@
                 Liste von Österreichischen Polizeiinspektionen
             </tfoot>
         </table>
-
     </section>
+
     <section id="streifendienst">
         <h2>Streifendienst</h2>
         <p>Der Streifendienst wird an 365 Tagen im Jahr rund um die Uhr durchgeführt und ist die wesentliche Säule der polizeilichen Arbeit.
-
-            <p>Die Polizistinnen und Polizisten werden dabei mit allen polizeilichen Sachverhalten (Fahndungen, Verkehrsunfällen, Diebstählen, Gewaltdelikten, Todesfällen usw.) konfrontiert. Sie wehren akute Gefahren ab, leiten Maßnahmen ein, nehmen Anzeigen auf und helfen Opfern. Der Streifendienst ist eine herausfordernde, vielfältige und spannende Tätigkeit. Nach Absolvierung der Polizeischule versehen Polizistinnen und Polizisten im Streifendienst einer Polizeiinspektion ihren Dienst. Im Exekutivdienst werden Polizistinnen und Polizisten jeden Alters eingesetzt. Durch diese Tätigkeit wird auch die Voraussetzung geschaffen, sich für andere polizeiliche Aufgaben zu qualifizieren, da die Polizeiarbeit von Grund auf erlernt werden muss.</p>
-            
-            </p>
-
+            <p>Die Polizistinnen und Polizisten werden dabei mit allen polizeilichen Sachverhalten (Fahndungen, Verkehrsunfällen, Diebstählen, Gewaltdelikten, Todesfällen usw.) konfrontiert. Sie wehren akute Gefahren ab, leiten Maßnahmen ein, nehmen Anzeigen auf und helfen Opfern. Der Streifendienst ist eine herausfordernde, vielfältige und spannende Tätigkeit. Nach Absolvierung der Polizeischule versehen Polizistinnen und Polizisten im Streifendienst einer Polizeiinspektion ihren Dienst. Im Exekutivdienst werden Polizistinnen und Polizisten jeden Alters eingesetzt. Durch diese Tätigkeit wird auch die Voraussetzung geschaffen, sich für andere polizeiliche Aufgaben zu qualifizieren, da die Polizeiarbeit von Grund auf erlernt werden muss.</p> 
+        </p>
         <img src="Streifendienst.jpg" width="500px">
     </section>
+
     <footer id="vorliegen">
         <h2>Vorliegen</h2>
         <form>
             Name: <input type="text">
-
             <p>Telefonnummer: <input type="text"></p>
-
             <p>Anliegen: <textarea id="text" name="text" cols="35" rows="4"></textarea></p>
-
             <p>anonyme Meldung: <input type="checkbox"></p>
-
             <p><button>Abschicken</button></p>
-
             <script>
                 const btn = document.querySelector("button");
-
                 btn.addEventListener('click', function() {
-                    alert("Ihr Anliegen wurde weitergeleitet. Wir werden uns in Kürze melden!");
+                    alert("Ihr Anliegen wurde weitergeleitet. Wir werden uns in kürze melden!");
                 });
             </script>
         </form>
